# OneNote-Linux

./: .gitignore  Cargo.toml  Makefile  README.md  flake.nix
packaging/: io.github.onenote-linux.Viewer.desktop  io.github.onenote-linux.Viewer.xml
src/: main.rs
src/app/: files.rs  mod.rs
src/canvas/: drawing.rs  history.rs  mod.rs  rendering.rs
src/graph/: client.rs  mod.rs
src/project/: graph.rs  import.rs  mod.rs  native.rs
