[package]
name = "onenote-linux"
version = "0.2.0"
edition = "2024"
rust-version = "1.92"
description = "Native Linux viewer and editor for imported OneNote notebooks"
license = "MIT"
repository = "https://github.com/PatrykFlama/OneNote-Linux"

[dependencies]
anyhow = "1.0"
eframe = { version = "0.34.3", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui_extras = { version = "0.34.3", features = ["all_loaders"] }
keyring = "4.1"
libonenote = { git = "https://github.com/PatrykFlama/libonenote", rev = "b23cfc6d031a2d07d51b075b70d0196811045ebd" }
mime_guess = "2.0"
percent-encoding = "2.3"
rfd = { version = "0.15", default-features = false, features = ["async-std", "xdg-portal"] }
sanitize-filename = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "3.3", features = ["json", "platform-verifier"] }

[dev-dependencies]
tempfile = "3.15"

[profile.release]
lto = "thin"
strip = "symbols"

[patch.crates-io]
onenote_parser = { git = "https://github.com/msiemens/onenote.rs", rev = "5138a39a3f4e72b840932f9872fecde52fa9da60" }
